test/style.css
/****** RESET ******/

*,
*::before,
*::after {
    box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
ul,
ol,
li,
figure,
figcaption,
hr {
    margin: 0;
    padding: 0;
}

ul,
ol {
    list-style: none;
}

/****** VARIABLES ******/

:root {
    /** COLORS **/
    --light-cream: #FFF8DE;
    --secondary-cream: #FFF2C6;
    --light-blue: #AAC4F5;
    --secondary-blue: #8CA9FF;

    /** BURGER MENU **/
    --burger-anim-duration: 0.3s;
}

/****** GENERAL STYLE ******/

html {
    scroll-behavior: smooth;
}

a {
    text-decoration: none;
    transition: 0.3s;
}

h1,
h2 {
    font-size: clamp(2rem, 5vw + 1rem, 2.5rem);
}

h2 {
    color: var(--light-blue);
    text-align: center;
    font-family: 'Brygada 1918', serif;
}

img {
    width: 100%;
    height: auto;
    display: block;
}

a,
button,
#burger-container,
.nav-links li a {
    -webkit-tap-highlight-color: transparent;
}

/****** LAYOUT ******/

body {
    background-color: var(--light-cream);
    font-family: 'PT Serif', serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

header,
#products,
#product-content,
#aboutUsWrapper,
#contact,
footer {
    padding-inline: 1.5rem;
}

header>div,
footer {
    padding-block: 1rem;
}

header,
footer {
    background-color: var(--secondary-cream);
}


header {
    position: sticky;
    top: 0;
    z-index: 1000;
    display: flex;
    justify-content: space-evenly;
    align-content: center;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

header,
.nav-links {
    gap: 2.5rem;
}

nav {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

nav a {
    color: var(--light-blue);
}

#title {
    width: 12.5rem;
    height: auto;
    /* To keep proportions */
    display: block;
    /* To avoid space below the image */
}

.nav-links {
    display: flex;
    font-size: 1.2rem;
    padding-top: 0.3125rem;
}

.nav-links li {
    line-height: 2rem;
}

#burger-container {
    display: none;
}

#socialMediaHeader {
    display: flex;
    justify-content: center;
    gap: 1.5rem;
}

main {
    display: flex;
    flex-direction: column;
    flex: 1;
}

section {
    scroll-margin-top: 5rem;
}

#products,
#product-content,
#aboutUs,
#contact {
    padding-block: 2rem;
}

footer {
    text-align: center;
}

/****** COMPONENTS ******/

.product-cards {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.product-cards img {
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    transition: 0.1s;
}

.product-info {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    flex-wrap: wrap;
}

.product-info h3 {
    min-width: 8.5rem;
    text-align: start;
}

.product-info p {
    text-align: end;
}

.product-info div {
    flex: 1;
    min-width: 13rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.buttons {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    color: var(--secondary-blue);
    border: 1px solid var(--light-blue);
    padding: 0.2rem 0;
    text-align: center;
}

/****** SPECIFIC: INDEX.HTML ******/

#products {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 2rem;
}

#aboutUsWrapper {
    background-color: white;
}

#aboutUs {
    display: grid;
    grid-template-columns: 2fr 1fr;
    align-items: center;
    gap: 2rem;
    max-width: 80rem;
    margin: auto;
    padding-block: 2rem;
}

#aboutUs img {
    max-width: 20rem;
    justify-self: center;
    align-self: center;
}

#auDescription {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;
}

#contact {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    text-align: center;
}

.contact-card {
    display: flex;
    gap: 1rem;
    align-items: center;
}

.contact-card img {
    width: 2rem;
    aspect-ratio: 1 / 1;
    object-fit: contain;
}

.contact-card a {
    color: var(--secondary-blue);
}

#socialMedia {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

/****** SPECIFIC: PRODUCT PAGES ******/

#product-content {
    max-width: 80rem;
    margin: 0 auto;
    gap: 2rem;
}

#detailedProduct {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    gap: 1rem clamp(1rem, 2.5vw, 2rem);
}

#mainImageContainer {
    width: 100%;
    display: flex;
    scroll-snap-type: x mandatory;
    overflow-x: auto;
    scroll-behavior: smooth;
    scrollbar-width: none;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

#mainImageContainer::-webkit-scrollbar {
    display: none;
}

#mainImageContainer img {
    flex: 0 0 100%;
    scroll-snap-align: center;
}

#thumbnails {
    grid-row: 2 / 3;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 1rem;
}

#thumbnails img {
    cursor: pointer;
    opacity: 0.7;
}

#thumbnails img:first-child {
    opacity: 1;
}

#productDescription {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 1rem 2rem;
}

#productTitle {
    text-align: center;
}

#productPrice {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

#productPrice p {
    font-size: 2rem;
}

#productPrice a {
    font-size: 1.1rem;
}

#otherProducts {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

#productsGallery {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem 2rem;
    max-width: 50rem;
    margin: 0 auto;
}

/****** HOVER EFFECT ******/

@media (hover: hover) {

    /* Hovering effect only on computer */

    nav a:hover {
        color: var(--secondary-blue);
    }

    .product-cards img:hover,
    .other-product-cards img:hover {
        box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
        transition: 0.3s;
    }

    .product-info a:hover,
    #productPrice a:hover {
        cursor: pointer;
        color: var(--light-cream);
        background-color: var(--light-blue);
        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    }

    .contact-card a:hover {
        color: var(--light-blue);
    }

    #thumbnails img:hover {
        opacity: 1 !important;
    }
}

/****** MEDIA QUERIES ******/

@media (width < 1220px) {
    #products {
        grid-template-columns: repeat(2, 1fr);
        max-width: 60rem;
        margin: auto;
    }
}

@media (width < 1000px) {
    #productDescription {
        grid-row: 1 / 3;
    }
}

@media (width < 890px) {
    #aboutUs {
        grid-template-columns: 1fr;
    }
}

@media (width < 830px) {
    #detailedProduct {
        display: flex;
        flex-direction: column;
        max-width: 40rem;
    }

    #productsGallery {
        grid-template-columns: 1fr;
    }
}

@media (width < 970px) {
    #products {
        grid-template-columns: 1fr;
    }

    /****BURGER MENU MANAGEMENT****/

    header {
        gap: 0;
        padding-inline: 0;
    }

    header>div {
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-color: var(--secondary-cream);
        z-index: 999;
        padding-inline: 1.5rem;
    }

    nav {
        justify-content: space-between;
    }

    .nav-links {
        position: fixed;
        top: 5.625rem;
        right: -100%;
        width: 100%;
        height: calc(100dvh - 5.625rem);
        z-index: 9888;
        display: flex;
        flex-direction: column;
        gap: 0.5rem;
        text-align: center;
        background-color: rgba(255, 242, 198, 0.9);
        padding: 2rem;
        transition: all 0.2s ease-out;
    }

    .nav-links.active {
        transform: translateX(-100%);
    }

    .nav-links li {
        padding: 0.3rem;
    }

    #nav-links li:last-child {
        margin-top: auto;
    }

    #burger-container {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        width: 1.8rem;
        height: 1.2rem;
        margin-top: 0.35rem;
    }

    .line {
        width: 100%;
        height: 3px;
        background-color: var(--light-blue);
        border-radius: 2px;
    }

    .unclicked .line-1 {
        animation: burger-top-reverse var(--burger-anim-duration) forwards;
    }

    .line-2 {
        transition: all var(--burger-anim-duration) ease-in-out;
    }

    .unclicked .line-3 {
        animation: burger-bottom-reverse var(--burger-anim-duration) forwards;
    }

    .clicked .line-1 {
        animation: burger-top var(--burger-anim-duration) forwards;
    }

    .clicked .line-2 {
        opacity: 0;
    }

    .clicked .line-3 {
        animation: burger-bottom var(--burger-anim-duration) forwards;
    }

    @keyframes burger-top {
        0% {
            transform: translateY(0) rotate(0);
        }

        75% {
            transform: translateY(0.525rem) rotate(0);
        }

        100% {
            transform: translateY(0.525rem) rotate(45deg);
        }
    }

    @keyframes burger-bottom {
        0% {
            transform: translateY(0) rotate(0);
        }

        75% {
            transform: translateY(-0.49rem) rotate(0);
        }

        100% {
            transform: translateY(-0.49rem) rotate(-45deg);
        }
    }

    @keyframes burger-top-reverse {
        0% {
            transform: translateY(0.525rem) rotate(45deg);
        }

        75% {
            transform: translateY(0.525rem) rotate(0);
        }

        100% {
            transform: translateY(0) rotate(0);
        }
    }

    @keyframes burger-bottom-reverse {
        0% {
            transform: translateY(-0.49rem) rotate(-45deg);
        }

        75% {
            transform: translateY(-0.49rem) rotate(0);
        }

        100% {
            transform: translateY(0) rotate(0);
        }
    }
}

